// Copyright 2023 Deflinhec
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bcasino.wallet.v2;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Wallet API v2";
    version: "2.0";
    contact: {
      name: "The BCasino Authors";
      url: "https://github.com/bcasino/api";
      email: "contact@bcasino.com";
    };
  };
  host: "127.0.0.1:7351";
  external_docs: {
    url: "https://bcasino.com/docs"
    description: "Olympus Casino payment documentation"
  };
  schemes: HTTP;
  consumes: "application/json";
  produces: "application/json";
  security_definitions: {
    security: {
      key: "BasicAuth";
      value: {
        type: TYPE_BASIC;
      }
    }
    security: {
      // Made up security so we can apply "Bearer <JWT_TOKEN>"
      key: "BearerJwt";
      value: {};
    }
  }
  // Default security definition.
  security: {
    security_requirement: {
      key: "BearerJwt";
      value: {};
    }
  },
};

/**
 * The Wallet RPC protocol service built with GRPC.
 */
service WalletService {
  // Deposit amount of currency to user account.
  rpc Deposit (DepositRequest) returns (DepositResponse) {
    option (google.api.http) = {
      post: "/v2/console/wallet/{currency}/deposit",
      body: "*"
    };
  }

  // Withdraw amount of currency from user account.
  rpc Withdraw (WithdrawRequest) returns (WithdrawResponse) {
    option (google.api.http) = {
      post: "/v2/console/wallet/{currency}/withdraw",
      body: "*"
    };
  }

  // Get currency balance of from user account.
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {
    option (google.api.http).get = "/v2/console/wallet/{currency}/{user_id}";
  }
}

message Balance {
  // The currency type.
  string currency = 1;
  // The amount to withdraw.
  int64 balance = 2;
}

message GetBalanceRequest {
  // The user ID this wallet item belongs to.
  string user_id = 1;
  // The currency type.
  string currency = 2;
}

message GetBalanceResponse {
  // The currency type.
  string currency = 1;
  // The amount to withdraw.
  int64 balance = 2;
}

message DepositRequest {
  // The user ID this wallet item belongs to.
  string user_id = 1;
  // The currency type.
  string currency = 2;
  // The order id of transaction.
  string order_id = 3;
  // The amount to deposit.
  int64 amount = 4;
}

message DepositResponse {
  // The user ID this wallet item belongs to.
  string user_id = 1;
  // The order id of transaction.
  string order_id = 2;
  // The balance after deposit.
  Balance balance = 3;
}

message WithdrawRequest {
  // The user ID this wallet item belongs to.
  string user_id = 1;
  // The currency type.
  string currency = 2;
  // The order id of transaction.
  string order_id = 3;
  // The amount to withdraw.
  int64 amount = 4;
}

message WithdrawResponse {
  // The user ID this wallet item belongs to.
  string user_id = 1;
  // The order id of transaction.
  string order_id = 2;
  // The balance after withdraw.
  Balance balance = 3;
}
